scroll event added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 We are ready to help you through an app
             </p>
 
-            <button class=" btn poppins-semibold text-xl text-[#030712] mt-5 ">Buy Tickets</button>
+            <button onclick='scrollActive()'id="buy-button" class=" btn poppins-semibold text-xl text-[#030712] mt-5 ">Buy Tickets</button>
 
 
         </section>
@@ -154,7 +154,7 @@
         </section>
 
         <!-- ticket section -->
-        <section class="mt-8 bg-[#F7F8F8]">
+        <section id='ticket-div'class="mt-8 bg-[#F7F8F8]">
             <div class="text-center ">
                 <h1 class="barlow-bold text-5xl"> P.H Paribahan</h1>
                 <p class="poppins-regular text-xl text-[#03071299] mt-8">yes you can choose your choice by your one
