--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
         <!-- banner section starts -->
         <section
-            class=" bg-contain max-w-full lg:h-screen  bg-fixed  bg-[url(images/banner.png)] bg-no-repeat text-center mt-7 rounded-lg">
+            class=" bg-cover max-w-full lg:h-screen    bg-[url(images/banner.png)] bg-no-repeat text-center mt-7 rounded-lg">
 
 
-            <h1 class="text-center text-[#FFFFFF] font-regular poppins-regular text-5xl lg:text-6xl pb-10 mt-5 ">
+            <h1 class="text-center text-[#FFFFFF] font-regular poppins-regular text-xl lg:text-6xl lg:pb-10 lg:mt-5 ">
                 End-to-End Travel with
                 <br>
                 <span class="text-[#1DD100] mt-4 barlow-regular">P Paribahan </span>
@@ -82,7 +82,7 @@
                 We are ready to help you through an app
             </p>
 
-            <button onclick='scrollActive()'id="buy-button" class=" btn poppins-semibold text-xl text-[#030712] mt-5 ">Buy Tickets</button>
+            <button onclick='scrollActive()'id="buy-button" class=" btn poppins-semibold text-xl text-[#030712] mt-5 ml-2">Buy Tickets</button>
 
 
         </section>
